[gd_scene load_steps=8 format=3 uid="uid://cxi1547wddhjn"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_3vkpu"]
[ext_resource type="Texture2D" uid="uid://c2uqvehwodqfc" path="res://assets/area.png" id="1_plxvd"]
[ext_resource type="PackedScene" uid="uid://mfnib7kxxyn" path="res://scenes/ball_spawner.tscn" id="2_6svjp"]
[ext_resource type="Texture2D" uid="uid://dkeetq2sjmav2" path="res://assets/LimitLine.png" id="2_jqu3s"]
[ext_resource type="Texture2D" uid="uid://mbrtlpe31gyn" path="res://assets/BackButton.png" id="4_h2mio"]
[ext_resource type="FontFile" uid="uid://dxkkwvv7hvxmb" path="res://assets/ShareTech-Regular.ttf" id="5_135dl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3rkb"]
size = Vector2(26, 758)

[node name="Main" type="Node2D"]
script = ExtResource("1_3vkpu")

[node name="GameArea" type="StaticBody2D" parent="."]

[node name="Limit" type="Polygon2D" parent="GameArea"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-40.8758, 248.561)
scale = Vector2(1.08126, 0.951258)
texture = ExtResource("2_jqu3s")
polygon = PackedVector2Array(60, -17.4099, 546.468, -17.4099, 546.468, -9.00002, 60, -9)

[node name="Box" type="Sprite2D" parent="GameArea"]
texture_filter = 1
position = Vector2(287, 513)
texture = ExtResource("1_plxvd")

[node name="Left" type="CollisionShape2D" parent="GameArea"]
position = Vector2(12, 572)
shape = SubResource("RectangleShape2D_o3rkb")

[node name="Bottom" type="CollisionShape2D" parent="GameArea"]
position = Vector2(288, 931)
rotation = 1.5708
shape = SubResource("RectangleShape2D_o3rkb")

[node name="Right" type="CollisionShape2D" parent="GameArea"]
position = Vector2(562, 572)
shape = SubResource("RectangleShape2D_o3rkb")

[node name="BallSpawner" parent="." instance=ExtResource("2_6svjp")]
position = Vector2(298, 200)

[node name="BackButton" type="TextureButton" parent="."]
offset_top = 47.0
offset_right = 100.0
offset_bottom = 147.0
rotation = -1.5708
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("4_h2mio")
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 118.0
offset_top = 21.0
offset_right = 576.0
offset_bottom = 168.0

[node name="Score" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_135dl")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true
follow_viewport_scale = 2.0

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 576.0
offset_bottom = 1028.0
color = Color(0.129412, 0.14902, 0.180392, 1)

[connection signal="dropped_ball" from="BallSpawner" to="." method="_on_ball_spawner_dropped_ball"]
[connection signal="game_over" from="BallSpawner" to="." method="_on_ball_spawner_game_over"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
